public/css/style.css
/*Font Sizes - Major Third - Base 16px

h1 = 3.815rem
h2 = 3.052rem
h3 = 1.953rem
navLogo = 2.441rem;

*/

/*Global Styles*/

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

html {
  font-size: 62.5%;
  scroll-behavior: smooth;
}

body {
  font-family: "Roboto", sans-serif;
  font-size: 16px;
  color: #111;
}

html,
body {
  text-size-adjust: none;
  -webkit-text-size-adjust: none;
  -ms-text-size-adjust: none;
  -moz-text-size-adjust: none;
}

/*Containers and Wrappers*/

.container {
  max-width: 120rem;
  margin: 0 auto;
  padding: 0 2rem;
}

/*Images*/

img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: 50% 50%;
}

/*Headings*/

.sectionHeading {
  text-transform: uppercase;
  line-height: 1.3;
}

.cardHeading {
  text-align: center;
}

h1 {
  font-size: 3.815rem;
}

h2 {
  font-size: 3.052rem;
}

h3 {
  font-size: 1.953rem;
}

/*Emphasis*/

strong,
em {
  color: #f36c2a;
  line-height: 1.5;
}

strong {
  text-transform: uppercase;
}

em {
  font-style: normal;
  font-weight: 500;
}

/*Action Menu*/

.actions {
  list-style: none;
}

/*Buttons*/

.btn,
.btn:link,
.btn:visited {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  padding: 2rem 4rem;
  text-transform: uppercase;
  font-weight: 500;
  background: transparent;
  transition: all 0.3s;
  text-decoration: none;
  text-align: center;
  line-height: 1.5;
  cursor: pointer;
}

.btn.btn--white {
  box-shadow: inset 0 0 0 2px #fff;
  color: #fff;
}

.btn.btn--white:hover {
  background-color: rgba(255, 255, 255, 0.1);
}

.btn.btn--orange {
  box-shadow: inset 0 0 0 2px rgb(243, 108, 42);
  color: #f36c2a;
}

.btn.btn--orange:hover {
  background-color: rgba(243, 108, 42, 0.1);
}

/*Paragraphs*/

p {
  line-height: 1.5;
}

/*Links*/

a,
a:link,
a:visited,
a:hover,
a:active {
  color: #f36c2a;
}

/*Icons*/

/*Helper Classes*/

.textLeft {
  text-align: left;
}

.textCenter {
  text-align: center;
}

/*Cards*/

/*Card Content*/

.cardContent {
  display: flex;
  flex-direction: column;
  gap: 2rem;
  justify-content: center;
}

/*Card Media*/

.cardMedia {
  width: 100%;
}

/*Card Text Box*/

.cardTextBox {
  display: flex;
  flex-direction: column;
  gap: 2rem;
  width: 100%;
}

.cardHeading {
  text-transform: uppercase;
  color: rgb(243, 108, 42);
}

/*Main Header*/

.mainHeader {
  background-color: #111;
}

/*Main Nav*/

.mainNav {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding-top: 2rem;
  padding-bottom: 2rem;
}

/*Main Nav Logo*/
.navLogo:link,
.navLogo:visited {
  font-size: 2.441rem;
  font-weight: 500;
  transition: all 0.3s;
  color: #f36c2a;
  text-decoration: none;
}

.navLogo:hover,
.navLogo:active {
  color: #fff;
}

.navLogo span {
  display: block;
}

/*Main Menu*/

.navMenu {
  list-style: none;
  display: flex;
  align-items: center;
  gap: 4rem;
}

.navLink:link,
.navLink:visited {
  font-weight: 500;
  color: #fff;
  text-transform: uppercase;
  text-decoration: none;
  border-bottom: 2px solid transparent;
  transition: all 0.3s;
}

.navLink:hover,
.navLink:active {
  border-color: #f36c2a;
}

.hamburger {
  display: none;
  cursor: pointer;
}

.bar {
  display: block;
  width: 2.5rem;
  height: 0.3rem;
  margin: 0.5rem auto;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
  background-color: #fff;
}

/*Section Hero*/

.section.hero {
  background: linear-gradient(0deg, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
    url("https://www.newyorkcodeandcoffee.com/images/sprawling-networker-banner.webp");
  background-position: center;
  background-size: cover;
  padding: 12rem 0;
}

.section.hero .sectionHeading {
  font-weight: 500;
  line-height: 1.5;
  color: #fff;
}

.section.hero span {
  display: block;
  font-weight: normal;
  text-shadow: white 0 0 10px;
}

/*Main Content*/

/*Sections*/

.section {
  padding: 8rem 0;
}

.sectionHeader {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.sectionContent {
  display: flex;
  flex-direction: column;
  gap: 4rem;
}

.sectionTextBox {
  display: flex;
  flex-direction: column;
  gap: 4rem;
}

.sectionText {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

/*Section About*/

/*Section Principles*/

.section.principles {
  background-color: #eee;
  border-top: 1px solid #ddd;
  border-bottom: 1px solid #ddd;
}

.section.principles .sectionHeading {
  text-align: center;
  color: rgb(243, 108, 42);
}

.section.principles .cards {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: 4rem;
}

.section.principles .actions {
  text-align: center;
}

/*Section How It Works*/

.section.howItWorks .sectionHeading {
  text-align: center;
  color: rgb(243, 108, 42);
}

.section.howItWorks .cards {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: 4rem;
}

.section.howItWorks .icon {
  text-align: center;
  font-size: 4.8rem;
  color: #b3b3b3;
}

/*Section Sponsors*/

.section.sponsors {
  background-color: #eee;
  border-top: 1px solid #ddd;
  border-bottom: 1px solid #ddd;
}

.section.sponsors .sectionHeading {
  text-align: center;
  color: rgb(243, 108, 42);
}

.section.sponsors .cards {
  display: flex;
  gap: 4rem;
  align-items: center;
  justify-content: center;
}

.section.sponsors .card {
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
  border: 1px solid #ddd;
  padding: 1rem;
  height: 100%;
  border-radius: 5%;
}

.espressoCards .card {
  width: 33.3333%;
}

.lightRoastCards .card {
  width: 50%;
}

.section.sponsors .cardContent {
  height: max-content;
  width: 100%;
}

.section.sponsors .cardContent svg {
  height: max-content;
  width: 100%;
}

.section.sponsors .card a {
  text-decoration: none;
}

.section.sponsors .card h4 {
  font-size: 4rem;
  text-align: center;
}

.section.sponsors .actions {
  text-align: center;
}

@media (max-width: 1024px) {
  .section.sponsors .card h4 {
    font-size: 2rem;
  }
} 

@media (max-width: 430px) {
  .section.sponsors .cards {
    flex-direction: column;
  }

  .section.sponsors .card h4 {
    font-size: 1rem;
  }
  
}


/*Section Contact*/

.section.contact {
  background-color: rgb(243, 108, 42);
  padding: 8rem 0 4rem;
}

.section.contact .sectionHeading {
  color: #fff;
}

.contactForm {
  display: flex;
  flex-direction: column;
  gap: 4rem;
}

.contactForm label {
  display: block;
  text-transform: uppercase;
  color: #fff;
  font-weight: 600;
}

.contactForm fieldset {
  border: none;
  width: 100%;
}

.formInfoBox {
  display: flex;
  gap: 4rem;
}

.formInfo {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.formInfo input,
.formInfo textarea {
  width: 100%;
  font-size: inherit;
  color: #fff;
  border: 0.4rem solid rgba(255, 255, 255, 0.25);
  outline: 0;
  background-color: transparent;
  padding: 1rem 2rem;
}

.formInfo input:focus,
.formInfo textarea:focus {
  border-color: #fff;
  box-shadow: 0 0 0 1px #ffffff;
}

.contactForm .btn {
  align-self: flex-start;
  border: none;
  box-shadow: inset 0 0 0 2px #fff;
  font-family: "Roboto", sans-serif;
  font-size: inherit;
  color: #fff;
}

/*Main Footer*/

.mainFooter {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  background-color: #f36c2a;
  padding: 4rem 0;
  color: #fff;
  text-align: center;
}

.footerContent {
  display: flex;
  flex-direction: column;
  gap: 2rem;
}

.mainFooter a:link,
.mainFooter a:visited {
  color: #fff;
}

.footerSocialNav .navMenu {
  align-items: center;
  justify-content: center;
}

.footerSocialNav .icon {
  font-size: 2.4rem;
}

/*Media Queries*/

@media (max-width: 940px) {
  .section.hero .sectionHeading {
    font-size: 3.01rem;
  }
  .section.principles .cards,
  .section.howItWorks .cards {
    grid-template-columns: 1fr;
    gap: 4rem;
  }
  .cardContent {
    flex-direction: row;
    gap: 2rem;
  }
  .cardHeading {
    text-align: left;
  }
}

@media (max-width: 740px) {
  .hamburger {
    display: block;
  }
  .hamburger.active .bar:nth-child(2) {
    opacity: 0;
  }
  .hamburger.active .bar:nth-child(1) {
    transform: translateY(8px) rotate(45deg);
  }
  .hamburger.active .bar:nth-child(3) {
    transform: translateY(-8px) rotate(-45deg);
  }
  .mobile {
    display: flex;
    align-items: center;
    justify-content: space-between;
    width: 100%;
  }
  .mainNav {
    flex-direction: column;
    gap: 4rem;
  }
  .mainNav .navMenu {
    display: none;
    text-align: center;
  }
  .navMenu.active {
    display: flex;
    flex-direction: column;
  }
  .cardHeading {
    text-align: center;
  }
  .cardContent {
    flex-direction: column;
  }
  .formInfoBox {
    flex-direction: column;
  }
  .section {
    padding: 6rem 0;
  }
  .section.hero {
    padding: 6rem 0;
  }
  .section.contact {
    padding: 6rem 0 2rem;
  }
}

@media (max-width: 440px) {
  .btn,
  .btn:link,
  .btn:visited {
    display: flex;
  }
  .contactForm .btn {
    align-self: normal;
  }
}

